Closed Bug 1742595 Opened 2 years ago Closed 2 years ago

Local debug assertion failure !frame || frame->AccessibleType() == eImageType || frame->AccessibleType() == a11y::eHTMLImageMapType

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: evilpie, Assigned: Jamie)

Details

Attachments

(1 file)

Every time I run a local optimized debug build I get the following assertion failure, that I have to disable:

Assertion failure: !frame || frame->AccessibleType() == eImageType || frame->AccessibleType() == a11y::eHTMLImageMapType, at /home/tom/projects/mozilla/accessible/generic/ImageAccessible.cpp:78

Is there any specific website or content that makes it happen, or is it on startup? Clean profile?

It's caused by a XUL image. I have a patch.

Assignee: nobody → jteh

(In reply to James Teh [:Jamie] from comment #2)

It's caused by a XUL image. I have a patch.

Great! Sorry I missed the previous comment, but I also don't really know what triggers the assertion.

FWIW, I was hitting it when typing into the address bar.

UL images use nsImageBoxFrame, not nsImageFrame.
AccessibleType() returns eNoType on nsImageBoxFrame.
Changing this to return eImageType seems a bit risky and adding a new type just for an assertion seems pointless.
Therefore, we just check the frame type.

:evilpie, would you mind testing this patch to verify it definitely fixes the assertion for you?

Flags: needinfo?(evilpies)

(In reply to James Teh [:Jamie] from comment #6)

:evilpie, would you mind testing this patch to verify it definitely fixes the assertion for you?

I can't reproduce the crash with this change.

Flags: needinfo?(evilpies)
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c8c0fe99587c
Don't throw an assertion when calling ImageAccessible::NativeState on a XUL image. r=eeejay
Severity: -- → S3
Priority: -- → P1
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: